syntax = "proto3";

package kurrentdb.protocol.v2.indexes.errors;

option csharp_namespace = "KurrentDB.Protocol.V2.Indexes.Errors";

import "kurrent/rpc/rpc.proto";

enum IndexesError {
  // Default value. This value is not used.
  // An error code MUST always be set to a non-zero value.
  // If an error code is not explicitly set, it MUST be treated as
  // an internal server error (INTERNAL).
  INDEXES_ERROR_UNSPECIFIED = 0;

  // The requested index does not exist.
  INDEXES_ERROR_INDEX_NOT_FOUND = 1 [(kurrent.rpc.error) = {
    status_code: NOT_FOUND,
    has_details: true,
  }];

  // The requested index already exists
  INDEXES_ERROR_INDEX_ALREADY_EXISTS = 2 [(kurrent.rpc.error) = {
    status_code: ALREADY_EXISTS,
    has_details: true,
  }];

  // The index engine is not yet ready
  INDEXES_ERROR_INDEXES_NOT_READY = 3 [(kurrent.rpc.error) = {
    status_code: FAILED_PRECONDITION,
    has_details: true,
  }];
}

// Details for INDEXES_ERROR_INDEX_NOT_FOUND errors.
message IndexNotFoundErrorDetails {
  string name = 1;
}

// Details for INDEXES_ERROR_INDEX_ALREADY_EXISTS errors.
message IndexAlreadyExistsErrorDetails {
  string name = 1;
}

message IndexesNotReadyErrorDetails {
  int64 current_position = 1;
  int64 target_position = 2;
}
